	* gm2/m2pp.c:  pl (New function). m2pp_decl_list (New function).
	  m2pp_decl_bool (New function).  remember (New function).
	  m2pp_translation (New function).  m2pp_module_block (New function).
	  m2pp_procedure_type modified to understand varargs.
	* gm2/tools-src/createUlmSys:  fixed to test for presence of include
	  files so that it can be run in a cross compiler for a minimal target.

2014-04-20      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GenGCC.mod:  (CodeInitAddress) declare tokenno
	  and location and set them correctly.
	* gm2/gm2spec.c:  let the -B switch determine where the (preprocessor)
	  cc1 is found.

2014-04-05      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GenGCC.mod:  (CodeInitAddress)  New procedure.
	  (CodeStatement) added case clause for InitAddressOp which calls
	  CodeInitAddress.
	* gm2/gm2-compiler/M2Quads.def:  added InitAddressOp.
	* gm2/gm2-compiler/M2Quads.mod:  (CheckVariableAt)  generate
	  an InitAddressOp instead of CodeBecomesOp.  (WriteQuad)
	  new case clause for InitAddressOp.  (WriteOperands) new case
	  clause for InitAddressOp.
	* fixes variable at address bugs (see
	  testsuite/gm2/embedded/pass/varataddress2.mod)

2014-03-19      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-gcc/m2except.c:  (do_call3) corrected number of parameters.
	  (build_exc_ptr) add assertion.  (gm2_build_throw) add location.
	* gm2/tools-src/createUlmSys:  improved error message.
	* libgm2/Makefile.in:  build and install the Ulm libraries.
	  Included $(GM2_OBJ)/gm2-libs/gm2-libs-target.h as a dependant
	  to $(GM2_OBJ)/ulm-lib-gm2/sys/SYSTEM.c.

2014-03-18      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-gcc/m2except.c:  do_call0 (New function).
	  do_call1 (New function).  do_call3 (New function).
	  build_exc_ptr (rewritten to use do_call1).
	  do_free_exception (rewritten to use do_call1).
	  do_throw (rewritten to use do_call3).
	  do_rethrow (rewritten to use do_call0).