@@ -20,9 +20,11 @@ if $tracelevel then {
 }
 
 # load support procs
+
 load_lib gm2-torture.exp
 
-gm2_init "-I.:../gm2/gm2-libs-iso:$srcdir/../gm2/gm2-libs-iso:$srcdir/../gm2/gm2-libs:../gm2/gm2-libs:$srcdir/gm2/calling-c/datatypes/unbounded/run/pass" -fiso -L../gm2/gm2-libs-iso -L../gm2/gm2-libs
+
+gm2_init "-I.:${gccpath}/libgm2/libiso:${gccpath}/libgm2/libpim/:$srcdir/gm2/calling-c/datatypes/unbounded/run/pass" -fiso -L${gccpath}/libgm2/libiso/.libs/ -L${gccpath}/libgm2/libpim/.libs/ 
 
 set XGCC [lookfor_file $tmpdir xgcc];
 
