@@ -22,7 +22,7 @@ if $tracelevel then {
 # load support procs
 load_lib gm2-torture.exp
 
-gm2_init "-I../gm2/gm2-libs:$srcdir/../gm2/gm2-libs" -fsoft-check-all -L../gm2/gm2-libs -L../gm2/gm2-libs-iso -L../gm2/gm2-libs-pim
+gm2_init "-I../gm2/gm2-libs:$srcdir/../gm2/gm2-libs" -fsoft-check-all -L{gccpath}/libgm2/libpim/.libs/ -L{gccpath}/libgm2/libiso/.libs/
 
 foreach testcase [lsort [glob -nocomplain $srcdir/$subdir/*.mod]] {
     # If we're only testing specific files and this isn't one of them, skip it.
