@@ -22,7 +22,7 @@ if $tracelevel then {
 # load support procs
 load_lib gm2-torture.exp
 
-gm2_init "-I../gm2/gm2-libs:$srcdir/../gm2/gm2-libs:$srcdir/../testsuite/gm2/extensions/run/pass:$srcdir/../testsuite/gm2/pim/pass" -L../gm2/gm2-libs -L../gm2/gm2-libs-iso -L../gm2/gm2-libs-pim
+gm2_init "-I../gm2/gm2-libs:$srcdir/../gm2/gm2-libs:$srcdir/../testsuite/gm2/extensions/run/pass:$srcdir/../testsuite/gm2/pim/pass" -L{gccpath}/libgm2/libpim/.libs/ -L{gccpath}/libgm2/libiso/.libs/
 
 gm2_link_with cvararg.o
 
